# sample-client-server-c

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  cui.c  cui.h  fs.c  fs.h  main.c  main_menu.c  serialization.c  storage.c  student.c  student.h
client/: cui.h  main_menu.h
common/: serialization.h
distributed/: CMakeLists.txt
distributed/client/: client.c  client.h  cui.c  remote_storage.c
distributed/common/: protocol.c  protocol.h  serialization.c  serialization.h  storage.h  string_ext.c  string_ext.h  student.c
distributed/server/: fs.c  main.c  server.c  server.h  storage.c
