cmake_minimum_required(VERSION 2.8.7)

project(common)
file(GLOB COMMON_SOURCES "common/*.c")
add_library(${CMAKE_PROJECT_NAME} STATIC ${COMMON_SOURCES})
target_link_libraries(${CMAKE_PROJECT_NAME} progbase jansson)

project(client)
include_directories(common)
include_directories(client)
file(GLOB CLIENT_SOURCES "client/*.c")
add_executable(${CMAKE_PROJECT_NAME} ${CLIENT_SOURCES} ${COMMON_SOURCES})
target_link_libraries(${CMAKE_PROJECT_NAME} progbase jansson ssl)

project(server)
include_directories(common)
include_directories(server)
file(GLOB SERVER_SOURCES "server/*.c")
add_executable(${CMAKE_PROJECT_NAME} ${SERVER_SOURCES} ${COMMON_SOURCES})
target_link_libraries(${CMAKE_PROJECT_NAME} progbase jansson ssl)